singularity/jobs/error2304910.err
Traceback (most recent call last):
  File "main.py", line 22, in <module>
    from utils.test import test_routine
  File "/v2c/vox2cortex/utils/test.py", line 269
    print(msgs)
        ^
SyntaxError: invalid syntax
